2011-09-07  MIYAMUKO Katsuyuki

	* (optimize-replacement): :backslash がおかしかったのを修正

2011-09-06  MIYAMUKO Katsuyuki

	* (optimize-replacement, regex-replace-all0): 存在しない後方参照は
	ppcre-invocation-error を投げるようにした

	* (apply-replacement, optimize-replacement): 置換文字列として :before-match,
	:after-match, :match, :backslash をサポート
	(ppcre:regex-replace
	 "bar" "foo bar baz"
	 '("[frob (was '" :match "' between '" :before-match "' and '" :after-match "')]"))

	* (regex-replace-all0, apply-replacement, optimize-replacement): 置換文字列
	を最適化して可能な限り substitute-string で処理するようにした

	* (regex-replace-all-simple, replace-match-string): cl-ppcre に合わせて
	\0 は ppcre-invocation-error とした
	xyzzy の substitute-string は \0 をマッチした文字列全体と置き換える

2011-09-05  MIYAMUKO Katsuyuki

	* (convert-from-psre): \A \z \W \w をサポート

	* (convert-from-psre): 不正な正規表現の場合に通知する
	例外のメッセージを改善

	* (do-scans): reg-starts, reg-ends が常に nil だった問題を修正

	* conditions.l: バイトコンパイルしたファイルがロードできなかった
	問題を修正

2011-09-03  MIYAMUKO Katsuyuki

	* (create-scanner): 不正な正規表現の場合は ppcre-syntax-error
	を投げるようにした

	* (ppcre-error, ppcre-invocation-error, ppcre-syntax-error): 追加

	* cl-ppcre との互換性のために以下の変数を定義
	- *property-resolver*
	- *regex-char-code-limit*
	- *use-bmh-matchers*
	- *optimize-char-classes*
	- *allow-quoting*
	- *allow-named-registers*

	* (regex-replace-all): replacement が単純な文字列なら
	substitute-string を呼ぶだけにして高速化

	* (quote-meta-chars): 実装した

	* (apply-replacement): \& \' \` \1 - \9 をサポート

2011-08-31  MIYAMUKO Katsuyuki

	* テストファイル置き場を変更
	tests => site-lisp/xl-ppcre/test

2011-08-30  MIYAMUKO Katsuyuki

	* (create-scanner): (?i) と (?-i) をサポート

	* (split): バグだらけだったのを直した

	* (make-register-group-vars): 関数が指定されていて
	マッチしなかった場合にエラーになっていたのを修正
	(ppcre:do-register-groups (word (#'parse-integer number))
          ("([a-z]+)|(\\d+)" "foo123")
          (princ (list word number)))

	* バインド変数名が nil の場合にキャプチャがずれていたのを修正
	(ppcre:register-groups-bind (nil second third fourth)
	  ("((a)|(b)|(c))()+" "abababc" :start 6)
	  (list second third fourth))
